--- a/7_4.md
+++ b/7_4.md
@@ -37,7 +37,7 @@
         - $f_X(x) \geq 0$
         - $\int_{-\infty}^{\infty}f_X(x)dx=1$
         - $F_x(-\infty)=0$
-        - $F_x(-\infty)=1$
+        - $F_x(\infty)=1$
         - $F_X(b) \geq F_x(a)$ if $b \geq a$
 - Example: Find the PDF and CDF of the distance $R$ from a site to the epicenter of a future earthquake, which can occur randomly and with equal likelihood anywhere within a 100 km radius of a site
     - $R =$ distance to earthquake epicenter
