--- a/7_6.md
+++ b/7_6.md
@@ -26,7 +26,7 @@
         - $f_{X | Y}(x|y)dx = \frac{P(x < X \leq x + dx \cap y < Y \leq y + dy)}{P(y < Y \leq y + dy)}$
         - This is equivalent to $f_{X |Y}(x|y)=\frac{f_{X, Y}(x, y)}{f_Y(y)}$
 - To find the conditional cumulative probability distribution, the conditional probability density function can be integrated
-    - $F_{X|Y}(x | y) = \int_{-\infty}{x}f_{X|Y}(u|y)du$
+    - $F_{X|Y}(x | y) = \int_{-\infty}^{x}f_{X|Y}(u|y)du$
 ## Independence
 - $X$ and $Y$ are said to be independent random variables if for all $y$ it is the case that $f_{X|Y}(x|y) = f_X(x)$ or equivalently:
     - $f_{Y|X}(y|x) = f_Y(y)$
