--- a/7_13.md
+++ b/7_13.md
@@ -8,7 +8,7 @@
     - Histograms provide an immediate impression of the most frequently occurring values and the range of the data
     - A good rule of thumb for the number of bins to use in a histogram is:
         - $n_{bins}=1 + 3.3\log_{10}(n_{observations})$
-- A **frequency distribution** can be obtained  by dividing each histogram y-coordinate by the tottal number of data entries
+- A **frequency distribution** can be obtained  by dividing each histogram y-coordinate by the total number of data entries
     - $y_i=\frac{observations \; in \; bin \; i}{total \; observations}$
 - An **empirical CDF** can be acquired by computing
     - $y_i = \frac{number \; observations \; \leq x}{total \; observations}$
